--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -57,6 +57,9 @@ markup:
   _merge: deep
   highlight:
     lineNos: false
+  goldmark:
+    renderer:
+      unsafe: true
 related:
   threshold: 80
   includeNewer: true
